[package]
name = "rmp-futures"
version = "0.1.0"
authors = ["Tyler Hall <tylerwhall@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3"
enum-primitive-derive = "0.1.2"
num-traits = "0.2"
rmp = "0.8"
rmpv = "0.4"
slab = "0.4"
spin = "0.5.2"
futures = { version = "0.3.1", features = ["unstable"] }

[dev-dependencies]
romio = "=0.3.0-alpha.9"

[features]
read-initializer = ["futures/read-initializer"]

[profile.release]
lto = true
debug = true

