[package]
name = "rmp-futures"
description = "Async Rust MessagePack and MessagePack-RPC"
version = "0.1.1"
authors = ["Tyler Hall <tylerwhall@gmail.com>"]
repository = "https://github.com/tylerwhall/rmp-futures"
documentation = "https://docs.rs/rmp-futures"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["msgpack", "MessagePack"]
categories = ["encoding", "asynchronous"]
edition = "2018"

[dependencies]
byteorder = "1.3"
enum-primitive-derive = "0.1.2"
num-traits = "0.2"
rmp = "0.8"
rmpv = "0.4"
slab = "0.4"
futures = { version = "0.3.1", features = ["unstable"] }

[dev-dependencies]
async-std = { version = "1.5.0", features = ["attributes"] }

[features]
read-initializer = ["futures/read-initializer"]

[profile.release]
lto = true
debug = true

